SigmaCodebackup3rdSep/objects/Inventory_Location_Product_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>AdjustedReceivedqty_c__c</fullName>
        <label>AdjustedReceivedqty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjusted_Quantity1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Picked Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjusted_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Increased Adjusted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocated_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Allocated Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attribute_Type__c</fullName>
        <label>Attribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BULK</fullName>
                </value>
                <value>
                    <fullName>SERIALIZED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AvailableAdjustedQty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AvailableAdjustedQty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <formula>(Received_Quantity__c +Adjusted_Quantity__c +AdjustedReceivedqty_c__c  +  Rental_Adjustment_Quantity__c ) -(Used_Quantity__c  +  Reserved_Quantity__c  + Rental_Reserved_Quantity__c +  AvailableAdjustedQty__c +Adjusted_Quantity1__c + Reduced_Adjusted_Quantity__c +Delivered_Quantity__c+Package_Quantity__c+Shipped_Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_No__c</fullName>
        <label>Batch No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bin</label>
        <referenceTo>Sublevel_location__c</referenceTo>
        <relationshipLabel>Inventory Location Product Line Items</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivered_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delivered Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <formula>Lot__r.Expiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ILid__c</fullName>
        <label>ILid</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipLabel>Inventory Location Product Line Items</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Inventory Location Product Line Items</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lot Product</label>
        <referenceTo>Lot_Product__c</referenceTo>
        <relationshipLabel>Inventory Location Product Line Items</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lot</label>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Inventory Location Product Line Items</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Run</label>
        <referenceTo>Manufacturing_Run__c</referenceTo>
        <relationshipLabel>Inventory Location Product Line Items</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Package Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Expiry_Date__c</fullName>
        <label>Product Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Received_date__c</fullName>
        <label>Received date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Serial_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Serial Number</label>
        <referenceTo>Product_Serial_Number__c</referenceTo>
        <relationshipLabel>Inventory Location Product Line Items</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory Location Product Line Items</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Inventory Location Product Line Items</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <formula>Product_Received_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Quantity1__c</fullName>
        <label>Received Quantity1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Received Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Adjusted_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Recent Adjusted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reduced_Adjusted_Quantity__c</fullName>
        <label>Reduced Adjusted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_Adjustment_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>To increase/decrease rental quantities.</description>
        <label>Rental Adjustment Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_Reserved_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rental Reserved Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reserved_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reserved Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Inventory Location Product Line Items</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_Code__c</fullName>
        <label>Serial Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Name__c</fullName>
        <formula>Product_Serial_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number_Code__c</fullName>
        <formula>Product_Serial_Number__r.Serial_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Number Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shipped Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Upload</fullName>
                </value>
                <value>
                    <fullName>Stock Movement</fullName>
                </value>
                <value>
                    <fullName>Stock Receiving</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Manufactured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Origin__c</fullName>
        <formula>TEXT(   Stock_Type__c   )</formula>
        <label>Stock Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Receiving_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Receiving Product</label>
        <referenceTo>Stock_In_Product__c</referenceTo>
        <relationshipLabel>Inventory Location Product Line Items</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stock_Type__c</fullName>
        <defaultValue>&apos;Stock Receiving&apos;</defaultValue>
        <label>Stock Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stock Receiving</fullName>
                </value>
                <value>
                    <fullName>Direct Add</fullName>
                </value>
                <value>
                    <fullName>Moved IN</fullName>
                </value>
                <value>
                    <fullName>Bom Conversion</fullName>
                </value>
                <value>
                    <fullName>Stock Adjustment</fullName>
                </value>
                <value>
                    <fullName>Stock Movement</fullName>
                </value>
                <value>
                    <fullName>Manufactured</fullName>
                </value>
                <value>
                    <fullName>Individual Conversion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(Product__r.Attribute_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Exp_Date__c</fullName>
        <formula>IF(!ISNULL(Expiry_Date__c),Expiry_Date__c,Product_Expiry_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Updated Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Used_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Used Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bucket_field__c</fullName>
        <defaultValue>0</defaultValue>
        <label>bucket field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inventory Location Product Line Item</label>
    <nameField>
        <displayFormat>ILPLI-{0}</displayFormat>
        <label>Inventory Location Product LineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Location Product Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>